crates/codegraph/tests/generate_tests/snapshots/generate_tests__repository__repo_structured_wrapper.snap
---
source: crates/codegraph/tests/generate_tests.rs
expression: code
---
//! Generated repository implementation for Candidate.
//! DO NOT EDIT — generated by codegraph.

use async_trait::async_trait;
use sea_orm::{
    ActiveModelTrait, ColumnTrait, DatabaseTransaction, EntityTrait, PaginatorTrait, QueryFilter, QueryOrder, Set,
};
use uuid::Uuid;

use super::repository::CandidateRepository;
use super::dto_create::CreateCandidateRequest;
use super::dto_update::UpdateCandidateRequest;
use super::dto_response::CandidateResponse;

pub struct CandidateRepositoryImpl;

#[async_trait]
impl CandidateRepository<sea_orm::DatabaseTransaction> for CandidateRepositoryImpl {
    #[tracing::instrument(skip(self, tx), fields(db.operation = "insert", db.table = "recruiting.candidate"))]
    async fn create(
        &self,
        tx: &DatabaseTransaction,
        cmd: CreateCandidateRequest,
    ) -> Result<Uuid, Box<dyn std::error::Error>> {
        let id = Uuid::new_v4();

        // Insert into recruiting.candidate (direct columns)
        let model = crate::entity::recruiting_candidate::ActiveModel {
            id: Set(id),
            address: Set(serde_json::to_value(cmd.address).unwrap_or(serde_json::Value::Null)),
            metadata: Set(cmd.metadata.as_ref().and_then(|v| serde_json::to_value(v).ok())),
            tags: Set(serde_json::to_value(cmd.tags).unwrap_or(serde_json::Value::Null)),
            preferences: Set(cmd.preferences.map(|v| serde_json::to_value(v).unwrap_or(serde_json::Value::Null))),
            ..Default::default()
        };
        model.insert(tx).await?;

        Ok(id)
    }

    #[tracing::instrument(skip(self, db), fields(db.operation = "select", db.table = "recruiting.candidate"))]
    async fn find_by_id(
        &self,
        db: &DatabaseTransaction,
        id: Uuid,
        include_deleted: bool,
    ) -> Result<Option<CandidateResponse>, Box<dyn std::error::Error>> {
        let mut query = crate::entity::recruiting_candidate::Entity::find()
            .filter(crate::entity::recruiting_candidate::Column::Id.eq(id));

        if !include_deleted {
            query = query.filter(crate::entity::recruiting_candidate::Column::DeletedAt.is_null());
        }

        let row = query.one(db)
            .await?;

        let row = match row {
            Some(r) => r,
            None => return Ok(None),
        };

        Ok(Some(CandidateResponse {
            id: row.id,
            address: serde_json::from_value(row.address).unwrap_or_default(),
            metadata: row.metadata.and_then(|v| serde_json::from_value(v).ok()),
            tags: serde_json::from_value(row.tags).unwrap_or_default(),
            preferences: row.preferences.and_then(|v| serde_json::from_value(v).ok()),
            workflow_state: None,
            created_at: row.created_at,
            updated_at: row.updated_at,
            ..Default::default()
        }))
    }

    #[tracing::instrument(skip(self, tx), fields(db.operation = "update", db.table = "recruiting.candidate"))]
    async fn update(
        &self,
        tx: &DatabaseTransaction,
        id: Uuid,
        cmd: UpdateCandidateRequest,
    ) -> Result<(), Box<dyn std::error::Error>> {
        // Update recruiting.candidate — only set fields present in the update request
        let mut model = crate::entity::recruiting_candidate::ActiveModel {
            id: Set(id),
            ..Default::default()
        };
        if let Some(v) = cmd.address { model.address = Set(serde_json::to_value(v).unwrap_or(serde_json::Value::Null)); }
        if let Some(v) = cmd.metadata { model.metadata = Set(serde_json::to_value(v).ok()); }
        if let Some(v) = cmd.tags { model.tags = Set(serde_json::to_value(v).unwrap_or(serde_json::Value::Null)); }
        if let Some(v) = cmd.preferences { model.preferences = Set(Some(serde_json::to_value(v).unwrap_or(serde_json::Value::Null))); }
        match model.update(tx).await {
            Ok(_) => {}
            Err(sea_orm::DbErr::RecordNotUpdated) => { /* RLS hid the row — find_by_id will return 404 */ }
            Err(e) => return Err(e.into()),
        }

        Ok(())
    }

    #[tracing::instrument(skip(self, db), fields(db.operation = "select_list", db.table = "recruiting.candidate"))]
    async fn list(
        &self,
        db: &DatabaseTransaction,
        page: u64,
        page_size: u64,
        filters: &std::collections::HashMap<String, String>,
        include_deleted: bool,
    ) -> Result<(Vec<CandidateResponse>, u64), Box<dyn std::error::Error>> {
        let mut query = crate::entity::recruiting_candidate::Entity::find()
;
        if !include_deleted {
            query = query.filter(crate::entity::recruiting_candidate::Column::DeletedAt.is_null());
        }
        let query = query.order_by_desc(crate::entity::recruiting_candidate::Column::CreatedAt);
        let paginator = query.paginate(db, page_size);

        let total = paginator.num_items().await?;
        let rows = paginator.fetch_page(page).await?;

        let mut results = Vec::with_capacity(rows.len());
        for row in rows {
            results.push(CandidateResponse {
                id: row.id,
                address: serde_json::from_value(row.address).unwrap_or_default(),
                metadata: row.metadata.and_then(|v| serde_json::from_value(v).ok()),
                tags: serde_json::from_value(row.tags).unwrap_or_default(),
                preferences: row.preferences.and_then(|v| serde_json::from_value(v).ok()),
                workflow_state: None,
                created_at: row.created_at,
                updated_at: row.updated_at,
                ..Default::default()
            });
        }

        Ok((results, total))
    }
}
