crates/codegraph/tests/generate_tests/snapshots/generate_tests__repository__repo_with_parent_ref.snap
---
source: crates/codegraph/tests/generate_tests/repository.rs
assertion_line: 429
expression: code
---
//! Generated repository implementation for Application.
//! DO NOT EDIT — generated by codegraph.

use async_trait::async_trait;
use sea_orm::{
    ActiveModelTrait, ColumnTrait, DatabaseTransaction, EntityTrait, PaginatorTrait, QueryFilter, QueryOrder, Set,
};
use uuid::Uuid;

use super::repository::ApplicationRepository;
use super::dto_create::CreateApplicationRequest;
use super::dto_update::UpdateApplicationRequest;
use super::dto_response::ApplicationResponse;

pub struct ApplicationRepositoryImpl;

#[async_trait]
impl ApplicationRepository<sea_orm::DatabaseTransaction> for ApplicationRepositoryImpl {
    #[tracing::instrument(skip(self, tx), fields(db.operation = "insert", db.table = "recruiting.application"))]
    async fn create(
        &self,
        tx: &DatabaseTransaction,
        _cmd: CreateApplicationRequest,
        parent_id: Uuid,
    ) -> Result<Uuid, Box<dyn std::error::Error>> {
        let id = Uuid::new_v4();

        // Insert into recruiting.application (direct columns)
        let model = crate::entity::recruiting_application::ActiveModel {
            id: Set(id),
            candidate_id: Set(Some(parent_id)),
            ..Default::default()
        };
        model.insert(tx).await?;

        Ok(id)
    }

    #[tracing::instrument(skip(self, db), fields(db.operation = "select", db.table = "recruiting.application"))]
    async fn find_by_id(
        &self,
        db: &DatabaseTransaction,
        id: Uuid,
        include_deleted: bool,
    ) -> Result<Option<ApplicationResponse>, Box<dyn std::error::Error>> {
        let mut query = crate::entity::recruiting_application::Entity::find()
            .filter(crate::entity::recruiting_application::Column::Id.eq(id));

        if !include_deleted {
            query = query.filter(crate::entity::recruiting_application::Column::DeletedAt.is_null());
        }

        let row = query.one(db)
            .await?;

        let row = match row {
            Some(r) => r,
            None => return Ok(None),
        };

        Ok(Some(ApplicationResponse {
            id: row.id,
            candidate_id: row.candidate_id,
            created_at: row.created_at,
            updated_at: row.updated_at,
            ..Default::default()
        }))
    }

    #[tracing::instrument(skip(self, db), fields(db.operation = "select_scoped", db.table = "recruiting.application"))]
    async fn find_by_id_scoped(
        &self,
        db: &DatabaseTransaction,
        id: Uuid,
        parent_id: Uuid,
        include_deleted: bool,
    ) -> Result<Option<ApplicationResponse>, Box<dyn std::error::Error>> {
        let mut query = crate::entity::recruiting_application::Entity::find()
            .filter(crate::entity::recruiting_application::Column::Id.eq(id))
            .filter(crate::entity::recruiting_application::Column::CandidateId.eq(parent_id));

        if !include_deleted {
            query = query.filter(crate::entity::recruiting_application::Column::DeletedAt.is_null());
        }

        let row = query.one(db)
            .await?;

        let row = match row {
            Some(r) => r,
            None => return Ok(None),
        };

        Ok(Some(ApplicationResponse {
            id: row.id,
            candidate_id: row.candidate_id,
            created_at: row.created_at,
            updated_at: row.updated_at,
            ..Default::default()
        }))
    }

    #[tracing::instrument(skip(self, tx), fields(db.operation = "update", db.table = "recruiting.application"))]
    async fn update(
        &self,
        tx: &DatabaseTransaction,
        id: Uuid,
        cmd: UpdateApplicationRequest,
    ) -> Result<(), Box<dyn std::error::Error>> {
        // Update recruiting.application — only set fields present in the update request
        let mut model = crate::entity::recruiting_application::ActiveModel {
            id: Set(id),
            ..Default::default()
        };
        if let Some(v) = cmd.candidate_id { model.candidate_id = Set(v); }
        match model.update(tx).await {
            Ok(_) => {}
            Err(sea_orm::DbErr::RecordNotUpdated) => { /* RLS hid the row — find_by_id will return 404 */ }
            Err(e) => return Err(e.into()),
        }

        Ok(())
    }

    #[tracing::instrument(skip(self, tx), fields(db.operation = "delete", db.table = "recruiting.application"))]
    async fn delete(
        &self,
        tx: &DatabaseTransaction,
        id: Uuid,
    ) -> Result<(), Box<dyn std::error::Error>> {
        let model = crate::entity::recruiting_application::Entity::find()
            .filter(crate::entity::recruiting_application::Column::Id.eq(id))
            .filter(crate::entity::recruiting_application::Column::DeletedAt.is_null())
            .one(tx)
            .await?
            .ok_or_else(|| Box::<dyn std::error::Error>::from("Entity not found or already deleted"))?;
        let mut active: crate::entity::recruiting_application::ActiveModel = model.into();
        active.deleted_at = sea_orm::ActiveValue::Set(Some(chrono::Utc::now().into()));
        match active.update(tx).await {
            Ok(_) => {}
            Err(sea_orm::DbErr::RecordNotUpdated) => { /* RLS hid the row — find_by_id will return 404 */ }
            Err(e) => return Err(e.into()),
        }
        Ok(())
    }

    #[tracing::instrument(skip(self, db), fields(db.operation = "select_list", db.table = "recruiting.application"))]
    async fn list(
        &self,
        db: &DatabaseTransaction,
        page: u64,
        page_size: u64,
        filters: &std::collections::HashMap<String, String>,
        include_deleted: bool,
    ) -> Result<(Vec<ApplicationResponse>, u64), Box<dyn std::error::Error>> {
        let mut condition = sea_orm::Condition::all();
        if let Some(val) = filters.get("candidate_id") {
            let parsed = uuid::Uuid::parse_str(val).map_err(|e| Box::<dyn std::error::Error>::from(format!("Invalid UUID for filter 'candidate_id': {e}")))?;
            condition = condition.add(crate::entity::recruiting_application::Column::CandidateId.eq(parsed));
        }
        if let Some(val) = filters.get("candidate_id") {
            let parsed = uuid::Uuid::parse_str(val).map_err(|e| Box::<dyn std::error::Error>::from(format!("Invalid UUID for filter 'candidate_id': {e}")))?;
            condition = condition.add(crate::entity::recruiting_application::Column::CandidateId.eq(parsed));
        }
        let mut query = crate::entity::recruiting_application::Entity::find()
            .filter(condition);
        if !include_deleted {
            query = query.filter(crate::entity::recruiting_application::Column::DeletedAt.is_null());
        }
        let query = query.order_by_desc(crate::entity::recruiting_application::Column::CreatedAt);
        let paginator = query.paginate(db, page_size);

        let total = paginator.num_items().await?;
        let rows = paginator.fetch_page(page).await?;

        let mut results = Vec::with_capacity(rows.len());
        for row in rows {
            results.push(ApplicationResponse {
                id: row.id,
                candidate_id: row.candidate_id,
                created_at: row.created_at,
                updated_at: row.updated_at,
                ..Default::default()
            });
        }

        Ok((results, total))
    }
}
